tekton-resources/eventlistener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-eventlistener-ingress
  namespace: github-builds
spec:
  ingressClassName: nginx
  rules:
  - host: tektoneventlistner-github-builds.35.212.92.161.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: el-github-builds-eventlistener
            port:
              number: 8080
